# app-backend

./: .rustfmt.toml  Cargo.toml
context/measurement/: Cargo.toml
context/measurement/src/: service.rs
context/measurement/src/dto/: uom.rs
context/measurement/src/entity/: uom.rs
context/measurement/src/validator/: create_uom_payload.rs  list_paginated_uoms_params.rs  mod.rs
context/product/: Cargo.toml
context/product/src/: lib.rs  service.rs
context/product/src/dto/: attribute_option.rs  attribute_option_value.rs  category.rs  mod.rs  product.rs
context/product/src/entity/: attribute_option.rs  attribute_option_value.rs  category.rs  mod.rs  product.rs  product_template.rs  variant_combination.rs
context/product/src/validator/: create_attribute_option_payload.rs  create_category_payload.rs  create_product_payload.rs  list_paginated_attribute_options_params.rs  list_paginated_categories_params.rs  list_paginated_products_params.rs  mod.rs
infra/: Cargo.toml
infra/src/: app_state.rs  database.rs  error.rs  lib.rs  meta.rs  response.rs  uuid.rs
interface/: Cargo.toml
interface/src/: attribute_option_router.rs  category_router.rs  lib.rs  product_router.rs  uom_router.rs
migration/src/: lib.rs  m20250129_121622_create_attribute_option_table.rs  m20250129_121752_create_attribute_option_value_table.rs  m20250130_074659_create_product_table.rs  m20250130_074729_create_variant_combination_table.rs
server/: Cargo.toml
server/src/: lib.rs
