[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["server"]

[workspace.dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies]
server = { version = "0.1.0", path = "server" }
