[package]
name = "app-backend"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "infra", "server", "migration", "interface", "context/*"]

[workspace.dependencies]
axum = { version = "0.8.1", features = ["macros"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
sea-orm = { version = "1.1.3", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
  "with-rust_decimal",
] }
serde = "1.0.217"
short-uuid = "0.1.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = [
  "v7",
  "fast-rng",
  "macro-diagnostics",
] }
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid"] }
utoipauto = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }

[dependencies]
server = { version = "0.1.0", path = "server" }
