[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
dotenvy = "0.15.7"
infra = { version = "0.1.0", path = "../infra" }
interface = { version = "0.1.0", path = "../interface" }
measurement = { version = "0.1.0", path = "../context/measurement" }
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa.workspace = true
utoipa-scalar.workspace = true
utoipauto.workspace = true
