[package]
name = "product"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono.workspace = true
infra = { version = "0.1.0", path = "../../infra" }
measurement = { version = "0.1.0", path = "../measurement" }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
utoipa.workspace = true
utoipauto.workspace = true
